--- a/.github/workflows/Newman.yml
+++ b/.github/workflows/Newman.yml
@@ -36,7 +36,7 @@ jobs:
       # Run Postman collection
       - name: Run Postman Collection
         run: |
-          newman run Regression testing.postman_collection.json \
+          newman run Regression-testing.postman_collection.json \
           -r htmlextra,cli \
           --reporter-htmlextra-export testResults/htmlreport.html \
           --reporter-htmlextra-darkTheme
